# share-anything-cli

./: Cargo.toml  README.md  install.sh
.github/workflows/: release-cli.yml
npm/: install.js  package.json  run.js
src/: client.rs  config.rs  error.rs  main.rs  progress.rs  time.rs
src/commands/: download.rs  info.rs  list.rs  login.rs  logout.rs  mod.rs  upload.rs
src/p2p/: mod.rs  protocol.rs  receiver.rs  rtc.rs  sender.rs  signaling.rs
