[package]
name = "share"
version = "0.1.0"
edition = "2021"
description = "CLI for Share Anything file sharing"
license = "MIT"

[[bin]]
name = "share"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["multipart", "stream", "json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
indicatif = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
anyhow = "1"
atty = "0.2"
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"
mime_guess = "2"
